# market-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: eod.yml
db/: init.sql
scripts/: cron.example  run_eod.sh  setup_venv.sh
src/market_agent/: __init__.py  cli.py  config.py  groq_client.py  pipeline.py
src/market_agent/analysis/: trend_scoring.py
src/market_agent/data_sources/: yfinance_source.py
src/market_agent/memory/: __init__.py  db.py  models.py  repository.py
src/market_agent/notify/: emailer.py
src/market_agent/reporting/: eod_template.md.j2  report_generator.py
tests/: test_smoke.py
