[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-research-agent"
version = "0.1.0"
description = "Agentic market research assistant (Groq + SMTP + Postgres + cron)"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "pytest>=7.4.0", "pytest-mock>=3.12.0"]

[project.scripts]
market-agent = "market_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]